--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,25 @@
     <string name="action_settings">Settings</string>
     <string name="action_main">Main</string>
 
+    <!--###ADD_METADATA###-->
+    <string name="add_metadata_heading">Add new meta data</string>
+    <string name="domain">Domain:</string>
+    <string name="special_characters">Special Characters</string>
+    <string name="letters">Letters</string>
+    <string name="numbers">Numbers</string>
+    <string name="length">Length:</string>
+
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+
+    <!--###GENERATOR###-->
+    <string name="generate_heading">Generate Password</string>
+    <string name="generate">Generate</string>
+    <string name="master_password_heading">Master password:</string>
+    <string name="password">Your password:</string>
+    <string name="init_password"></string>
+    <string name="done">Done</string>
+
     <!--###ABOUT###-->
     <string name="about">About</string>
     <string name="version_number">Version 1.0</string>
@@ -28,5 +47,11 @@
 
     <!-- ###SETTINGS### -->
     <string name="title_activity_settings">Settings</string>
+
+    <!-- ###DIALOGS### -->
+    <string name="okay">OKAY</string>
+
+    <!-- ##WELCOME### -->
+    <string name="viewhelp">View help</string>
 
 </resources>
