--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,13 @@
     <string name="letters">Letters</string>
     <string name="numbers">Numbers</string>
     <string name="length">Length:</string>
+    <string name="iteration">Iteration:</string>
 
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+
+    <!--###UPDATE_METADATA###-->
+    <string name="update">Update</string>
 
     <!--###GENERATOR###-->
     <string name="generate_heading">Generate Password</string>
