--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
 
     <!--###UPDATE_METADATA###-->
     <string name="update">Update</string>
+    <string name="old_password">Old password:</string>
+    <string name="new_password">New password:</string>
+    <string name="master_password_description">The master password is required to generate the old and new password.</string>
+
 
     <!--###GENERATOR###-->
     <string name="generate_heading">Generate Password</string>
