--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_main">Main</string>
 
+    <!--###METADATA_LIST###-->
+    <string name="undo">Undo</string>
+
     <!--###ADD_METADATA###-->
     <string name="add_metadata_heading">Add new meta data</string>
     <string name="domain">Domain:</string>
@@ -19,8 +22,6 @@
     <string name="numbers">Numbers</string>
     <string name="length">Length:</string>
     <string name="iteration">Iteration:</string>
-
-
 
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
@@ -31,9 +32,11 @@
     <string name="new_password">New password:</string>
     <string name="master_password_description">The master password is required to generate the old and new password.</string>
     <string name="next">Next</string>
+    <string name="added_message">Metadata updated.</string>
+    <string name="canceled_message">Update canceled.</string>
+
 
     <string name="add_new_metadata_heading">1. New meta data</string>
-
     <string name="passwords_heading">2. Your passwords</string>
 
 
