--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="numbers">Numbers</string>
     <string name="length">Length:</string>
     <string name="iteration">Iteration:</string>
+    <string name="add_domain_message">Please add a domain.</string>
 
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
