--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,10 @@
     <!--###ADD_METADATA###-->
     <string name="add_metadata_heading">Add new meta data</string>
     <string name="domain">Domain:</string>
+    <string name="username">Username:</string>
     <string name="special_characters">Special Characters</string>
-    <string name="letters">Letters</string>
+    <string name="letters_upper">Uppercase</string>
+    <string name="letters_lower">Lowercase</string>
     <string name="numbers">Numbers</string>
     <string name="length">Length: </string>
     <string name="iteration">Iteration: </string>
