--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="action_about">About</string>
     <string name="action_settings">Settings</string>
     <string name="action_main">Main</string>
+    <string name="action_delete">Delete all metadata</string>
+
+    <string name="delete_dialog">Do you really wish to delete all metadata?</string>
+    <string name="delete_dialog_success">All metadata deleted.</string>
 
     <!--###METADATA_LIST###-->
     <string name="undo">Undo</string>
@@ -74,11 +78,18 @@
     <string name="title_clipboard">Copy passwords to clipboard</string>
     <string name="summary_clipboard">Passwords will automatically copied after generation.</string>
 
+    <string name="title_metadata">Metadata</string>
+    <string name="title_delete_metadata">Delete all meta data.</string>
+
+    <string name="title_expert_mode">Expert mode</string>
+
+    <string name="title_hash_algorithms">Choose Hash Algorithm</string>
     <string-array name="pref_hash_algorithms">
         <item>SHA256</item>
         <item>SHA384</item>
         <item>SHA512</item>
     </string-array>
+    <string name="default_hash_algorithm">SHA512</string>
 
     <!-- ###DIALOGS### -->
     <string name="okay">OKAY</string>
