--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="action_about">About</string>
     <string name="action_settings">Settings</string>
     <string name="action_main">Main</string>
-    <string name="action_delete">Delete all metadata</string>
+    <string name="action_delete">Delete all parameters</string>
 
-    <string name="delete_dialog">Do you really wish to delete all metadata?</string>
-    <string name="delete_dialog_success">All metadata deleted.</string>
+    <string name="delete_dialog">Do you really wish to delete all parameters?</string>
+    <string name="delete_dialog_success">All parameters deleted.</string>
 
     <!--###METADATA_LIST###-->
     <string name="undo">Undo</string>
@@ -29,7 +29,7 @@
 
     <!--###ADD_METADATA###-->
     <string name="placeholder_no_data">-</string>
-    <string name="add_metadata_heading">Add new meta data</string>
+    <string name="add_metadata_heading">Add new parameters</string>
     <string name="domain">Domain:</string>
     <string name="username">Username:</string>
     <string name="characterset">Character set:</string>
@@ -51,10 +51,11 @@
     <string name="new_password">New password:</string>
     <string name="master_password_description">The master password is required to generate the old and new password.</string>
     <string name="next">Next</string>
-    <string name="added_message">Metadata updated.</string>
+    <string name="save">Save</string>
+    <string name="added_message">Parameters updated.</string>
     <string name="canceled_message">Update canceled.</string>
 
-    <string name="add_new_metadata_heading">1. New meta data</string>
+    <string name="add_new_metadata_heading">1. New parameters</string>
     <string name="passwords_heading">2. Your passwords</string>
 
     <string name="copy_clipboar_old">Old password copied.</string>
@@ -93,8 +94,8 @@
     <string name="title_clipboard">Copy passwords to clipboard</string>
     <string name="summary_clipboard">Passwords will automatically copied after generation.</string>
 
-    <string name="title_metadata">Metadata</string>
-    <string name="title_delete_metadata">Delete all meta data.</string>
+    <string name="title_metadata">Parameter</string>
+    <string name="title_delete_metadata">Delete all parameters.</string>
 
     <string name="title_expert_mode">Expert mode</string>
     <string name="title_hash_iterations">Number of hash iterations</string>
@@ -109,6 +110,12 @@
 
     <!-- ###DIALOGS### -->
     <string name="okay">OKAY</string>
+    <string name="dialog_welcome_heading">Welcome</string>
+    <string name="dialog_welcome">Welcome to Privacy Friendly Passwordgenerator!</string>
+    <string name="dialog_add_heading">1. Add parameters</string>
+    <string name="dialog_add_description">Choose the parameters for your password.</string>
+    <string name="dialog_generate_heading">2. Generate passwords</string>
+    <string name="dialog_generate_description">Choose one item in the list and open the generator by a click. Enter a masterpasswort and generate your password.</string>
 
     <!-- ##WELCOME### -->
     <string name="viewhelp">View help</string>
