--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_about">Über</string>
     <string name="action_settings">Einstellungen</string>
     <string name="action_main">Hauptmenü</string>
+    <string name="action_tutorial">Tutorial anzeigen</string>
     <string name="action_delete">Alle Parameter löschen</string>
 
     <string name="delete_dialog">Möchten Sie wirklich alle Parameter löschen?</string>
