--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_about">About</string>
     <string name="action_settings">Settings</string>
     <string name="action_main">Main</string>
+    <string name="action_tutorial">Show Tutorial</string>
     <string name="action_delete">Delete all parameters</string>
 
     <string name="delete_dialog">Do you really wish to delete all parameters?</string>
