--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -158,8 +158,8 @@
 
     <!-- ##TUTORIAL_DIALOG-->
     <string name="title_activity_welcome">Home Screen</string>
-    <string name="skip">SKIP</string>
-    <string name="start">GOT IT</string>
+    <string name="skip">Überspringen</string>
+    <string name="start">FERTIG</string>
 
     <string name="slide_1_title">Willkommen!</string>
     <string name="slide_1_desc">Mit Privacy Friendly Passwort Generator können Passworte auf Basis von Parametern generiert werden.</string>
