--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!--###METADATA_LIST###-->
     <string name="undo">Undo</string>
     <string name="item_deleted">deleted.</string>
+    <string name="initial_alert">ADD PARAMETER SET</string>
 
     <!--###METADATA_CARD###-->
     <string name="numbers_123">123</string>
@@ -186,15 +187,15 @@
     <string name="start">GOT IT</string>
 
     <string name="slide_1_title">Welcome!</string>
-    <string name="slide_1_desc">With Privacy Friendly Password Generator you can generate passwords based on previously saved parameters.</string>
+    <string name="slide_1_desc">With Privacy Friendly Password Generator you can generate passwords based on previously saved parameter sets and a secret master password.</string>
 
     <string name="slide_2_title">Add Parameters</string>
-    <string name="slide_2_desc">Add parameters that describe properties of your password.</string>
+    <string name="slide_2_desc">Add parameters that describe properties of your password (e.g. length).</string>
 
-    <string name="slide_3_title">Generate Passwords</string>
-    <string name="slide_3_desc_one">1. Tap on a parameter</string>
-    <string name="slide_3_desc_two">2. Enter a master password</string>
-    <string name="slide_3_desc_three">3. Generate</string>
+    <string name="slide_3_title">Parameter Sets</string>
+    <string name="slide_3_desc_one">Parameter sets describe properties of your password like the length.</string>
+    <string name="slide_3_desc_two">They are stored on the device and displayed as a list. </string>
+    <string name="slide_3_desc_three">The generation of a password is started by choosing a parameter set from the list.</string>
 
     <string name="slide_4_title">Manage Parameters</string>
     <string name="slide_4_action_one">Update</string>
