--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,4 +210,7 @@
     <string name="slide_master_password_characters">be a combination of different character types</string>
     <string name="slide_master_password_chain">be a chain of words</string>
     <string name="slide_master_password_eight">- at least 8 characters</string>
+
+    <!-- ##IMAGE_DESCRIPTIONS-->
+    <string name="app_logo">Application Logo</string>
 </resources>
